# delve

./: Makefile.am  configure.ac
libinc/: Makefile.am
scripts/: create_matrix_dataset.sh  run_bwa.sh  run_bwa_default.sh
src/: Makefile.am  bedsim.c  delve.c  delve.h  delve_struct.h  dyn_prog.c  dyn_prog.h  genome_priors.c  genome_priors.h  genome_rtree.c  genome_rtree.h  genome_sequences.c  genome_sequences.h  hmm.c  hmm.h  io.c  io.h  run_delve.c  seed.c  shared_data.c  shared_data.h  thread_data.c  thread_data.h
